tests/paczka1/fuzzy1/41650860.err
Error in line 2: O6y S568 4,9
Error in line 3: O6y A973 82,3
Error in line 13: bjvKj0hid A973 11,4
Error in line 20: WUVk8eb S568 47,0
Error in line 29: CKNs5 A973 21,5
Error in line 37: 9HTS S568 4,09
